# tts-plugin-aivisspeech

./: .coverage  .gitignore  AGENTS.md  GEMINI.md  LICENSE  README.md  pyproject.toml
tests/: test_connector.py  test_integration.py
tts_plugin_aivisspeech/: __init__.py  connector.py
